--- a/src/AutoLazer.App/wwwroot/index.html
+++ b/src/AutoLazer.App/wwwroot/index.html
@@ -11,5 +11,6 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="js/saveFile.js"></script>
 </body>
 </html>
